window size change responsive pages made

--- a/Instruments.html
+++ b/Instruments.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Instruments</title>
-	<link rel="stylesheet" type="text/css" href="theme.css">
-	<link rel="stylesheet" type="text/css" href="instruments.css">
+	<link rel="stylesheet" type="text/css" href="CSS/theme.css">
+	<link rel="stylesheet" type="text/css" href="CSS/instruments.css">
 </head>
 <body>
 
