fixed the navbar

--- a/Instruments.html
+++ b/Instruments.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Instruments</title>
-	<link rel="stylesheet" type="text/css" href="CSS/theme.css">
+<html lang="en">
+  <head>
+   	<link rel="stylesheet" type="text/css" href="CSS/theme.css">
 	<link rel="stylesheet" type="text/css" href="CSS/instruments.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
 		<li><a href="artists.html"> Followed Artists</a></li>
 	</ul>
 				
-
+<hr style="background-color: white">
 	<ul id="mat">
 		<li>
 			<img class="image" src="images/guitar.jpg">
@@ -32,7 +31,7 @@
 				If you are a fan of rock or blues music, you have likely heard what is called slide guitar playing. Instead of pressing the strings with his or her fingers, a guitarist slides a bar along the strings. It is said that this style of playing was originally at attempt to somehow approximate the rolling feeling of the blues with a guitar.
 				</p>
 			</div>
-			<h3><a href="https://www.britannica.com/art/guitar"> source </a></h3>
+			<h3><a href="https://www.yamaha.com/en/musical_instrument_guide/electric_guitar/"> source </a></h3>
 		</li>
 
 		<li>
