--- a/home.html
+++ b/home.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>home</title>
+<html lang="en">
+  <head>
+
 	<link rel="stylesheet" type="text/css" href="CSS/theme.css">
 	<link rel="stylesheet" type="text/css" href="CSS/home.css">
+
+	<title>home</title>
  </head>
-<!-- 
-	A heading h1
-	A small intro to myself and why this page
-	potha about music
-	an unordered list of links to the other 3 pages.
- -->
+
 <body>
 
-	<h1 id="top">My Page</h1>
+	<h1 id="top">My Page</h1>	
 
-		<ul id="nav" >
-			<li><a class="active" href="file:///D:/Documents/code/Projects/CS50%20WebProg/project0/home.html">Home</a> </li>
-			<li><a href="">Favorite Genres</a></li>
-			<li><a href="file:///D:/Documents/code/Projects/CS50%20WebProg/project0/instruments.html">Favorite Instruments</a></li>
-			<li><a href=""> Followed Artists</a></li>
-		</ul>
+	<ul id="nav" >
+	    <li><a class="active" href="home.html">Home</a> </li>
+	    <li><a href="genre.html">Favorite Genres</a></li>
+	    <li><a href="instruments.html">Favorite Instruments</a></li>
+	    <li><a href="artists.html"> Followed Artists</a></li>
+	</ul>
 
+	<hr style="background-color: white">
 		<div id="student">
 			<img id="photo" src="images/me.jpg">
 			<p id="intro">
